--- a/Little Project/Little-project.html
+++ b/Little Project/Little-project.html
@@ -12,7 +12,7 @@
 
  <body>
  	<div class="navbar">
- 		<a href="#"> Home </a>
+ 		<a href="#">  </a>
  		<a href="#"> About </a>
  		<a href="#"> Contact us </a>
  		<a href="#"> Search </a>
